Allow users to view investigations and edited a bit the details page
Don't have time to show Report on Add Investigation Page

--- a/Version4Nemesys/Views/Report/Details.cshtml
+++ b/Version4Nemesys/Views/Report/Details.cshtml
@@ -13,37 +13,37 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(ReportModel => ReportModel.ReportName)
+            Report Name
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(ReportModel => ReportModel.ReportName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(ReportModel => ReportModel.EventDate)
+            Date of Issue Encontered
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(ReportModel => ReportModel.EventDate)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(ReportModel => ReportModel.ReportDate)
+            Date of Report Issues
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(ReportModel => ReportModel.ReportDate)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(ReportModel => ReportModel.EventLocation)
+            Location Reported
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(ReportModel => ReportModel.EventLocation)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(ReportModel => ReportModel.EventDescription)
+            Report Description
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(ReportModel => ReportModel.EventDescription)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(ReportModel => ReportModel.User.Email)
+            Reporter Email
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(ReportModel => ReportModel.User.Email)
