--- a/Version4Nemesys/Views/Investigation/Details.cshtml
+++ b/Version4Nemesys/Views/Investigation/Details.cshtml
@@ -11,25 +11,25 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(InvestigationModel => InvestigationModel.ActionDate)
+            Date of Investigation Sumbission
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(InvestigationModel => InvestigationModel.ActionDate)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(InvestigationModel => InvestigationModel.InvestigationDescription)
+            Investigation Description
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(InvestigationModel => InvestigationModel.InvestigationDescription)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(InvestigationModel => InvestigationModel.InvestigationsInTest)
+            Investigation Status
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(InvestigationModel => InvestigationModel.InvestigationsInTest)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(InvestigationModel => InvestigationModel.User.Email)
+            Investigator Email
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(InvestigationModel => InvestigationModel.User.Email)
